--- a/app/src/main/res/layout/sheet_music_layout.xml
+++ b/app/src/main/res/layout/sheet_music_layout.xml
@@ -29,73 +29,106 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/tools"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_height"
+        android:layout_height="50dp"
+        android:background="@color/Phantom_Green"
         app:layout_constraintBottom_toTopOf="@+id/sheet_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
 
         <ImageButton
-            android:id="@+id/btn_back"
-            style="@style/ToolbarButtonStyle"
-            android:contentDescription="@string/back"
-            android:src="@drawable/ic_back" />
-
-        <ImageButton
             android:id="@+id/btn_replay"
-            style="@style/ToolbarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:background="#00FFFFFF"
             android:contentDescription="@string/replay"
-            android:src="@drawable/ic_replay" />
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_replay"
+            android:tint="@color/Smoke_Pine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btn_play"
-            style="@style/ToolbarButtonStyle"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="15dp"
+            android:background="#00FFFFFF"
             android:contentDescription="@string/play"
-            android:scaleY="1.5"
-            android:src="@drawable/ic_play" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/playbutton"
+            android:tint="@color/Smoke_Pine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_replay"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
-            android:id="@+id/btn_rewind"
-            style="@style/ToolbarButtonStyle"
-            android:layout_width="48dp"
+        <View
+            android:id="@+id/view"
+            android:layout_width="150dp"
             android:layout_height="match_parent"
-            android:contentDescription="@string/rewind"
-            android:src="@drawable/ic_rewind" />
-
-        <ImageButton
-            android:id="@+id/btn_forward"
-            style="@style/ToolbarButtonStyle"
-            android:contentDescription="@string/forward"
-            android:src="@drawable/ic_forward" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/btn_midi"
-            style="@style/DisabledToolbarButton"
-            android:layout_width="80dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="#00FFFFFF"
             android:enabled="false"
             android:text="MIDI"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+        <ImageButton
+            android:id="@+id/save_btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="10dp"
+            android:background="#00FFFFFF"
+            android:scaleType="fitCenter"
+            android:src="@drawable/save"
+            android:tint="@color/Smoke_Pine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_settings"
+            app:layout_constraintStart_toEndOf="@+id/view"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/btn_settings"
-            style="@style/ToolbarButtonStyle"
+
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+
+            android:layout_marginEnd="15dp"
+            android:background="#00FFFFFF"
             android:contentDescription="@string/settings"
-            android:src="@drawable/ic_settings" />
-    </LinearLayout>
+            android:scaleType="fitXY"
+            android:src="@drawable/menu1"
+            android:tint="@color/Smoke_Pine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:id="@+id/sheet_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="230dp"
+        android:background="@color/Bright_white"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,50 +136,95 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="130dp"
+        android:background="@color/Phantom_Green"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
+        <ImageButton
+            android:id="@+id/btn_rewind"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="10dp"
+            android:background="#00FFFFFF"
+            android:contentDescription="@string/rewind"
+            android:src="@drawable/ic_rewind"
+            android:tint="@color/Smoke_Pine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/btn_forward"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/up_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="ㅅ" />
+        <ImageButton
+            android:id="@+id/btn_forward"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="44dp"
+            android:background="#00FFFFFF"
+            android:contentDescription="@string/forward"
+            android:src="@drawable/ic_forward"
+            android:tint="@color/Smoke_Pine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
-                android:id="@+id/down_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="v" />
+        <ImageButton
+            android:id="@+id/up_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="30dp"
+            android:background="#00FFFFFF"
+            android:scaleType="fitXY"
+            android:src="@drawable/like"
+            android:tint="@color/Smoke_Pine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        </LinearLayout>
+        <ImageButton
+            android:id="@+id/down_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="10dp"
+            android:background="#00FFFFFF"
+            android:scaleType="fitXY"
+            android:src="@drawable/dislike"
+            android:tint="@color/Smoke_Pine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/up_button"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <Button
-            android:id="@+id/save_btn"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="save" />
+    <ImageButton
+        android:id="@+id/btn_back"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
+        android:background="#00FFFFFF"
+        android:contentDescription="@string/back"
+        android:src="@drawable/ic_back"
+        android:tint="@color/Smoke_Pine"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/chord"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="chord" />
-    </LinearLayout>
+    <ImageButton
+        android:id="@+id/chord"
+        android:layout_width="41dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="24dp"
+        android:background="#00FFFFFF"
+        android:scaleType="fitXY"
+        android:src="@drawable/magicwand"
+        android:text="chord"
+        android:tint="@color/Smoke_Pine"
+        app:layout_constraintStart_toEndOf="@+id/sheet1Title"
+        tools:layout_editor_absoluteY="80dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
