--- a/app/src/main/res/layout/sheet_music_layout.xml
+++ b/app/src/main/res/layout/sheet_music_layout.xml
@@ -95,14 +95,13 @@
             android:id="@+id/save_btn"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="15dp"
             android:background="#00FFFFFF"
             android:scaleType="fitCenter"
             android:src="@drawable/save"
             android:tint="@color/Smoke_Pine"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_settings"
-            app:layout_constraintStart_toEndOf="@+id/view"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
@@ -127,7 +126,7 @@
         android:id="@+id/sheet_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="230dp"
+        android:layout_marginTop="250dp"
         android:background="@color/Bright_white"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
@@ -140,7 +139,7 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="130dp"
+        android:layout_marginBottom="160dp"
         android:background="@color/Phantom_Green"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -218,13 +217,14 @@
         android:id="@+id/chord"
         android:layout_width="41dp"
         android:layout_height="41dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="59dp"
         android:background="#00FFFFFF"
         android:scaleType="fitXY"
         android:src="@drawable/magicwand"
         android:text="chord"
         android:tint="@color/Smoke_Pine"
-        app:layout_constraintStart_toEndOf="@+id/sheet1Title"
-        tools:layout_editor_absoluteY="80dp" />
+        app:layout_constraintBottom_toTopOf="@+id/tools"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
