--- a/app/src/main/res/layout/activity_delete_popup.xml
+++ b/app/src/main/res/layout/activity_delete_popup.xml
@@ -28,10 +28,10 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/warnningIcon" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/warnningIcon"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_marginTop="20dp"
