--- a/app/src/main/res/layout/choose_song.xml
+++ b/app/src/main/res/layout/choose_song.xml
@@ -8,72 +8,54 @@
     android:focusableInTouchMode="true"
     android:orientation="vertical">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:background="@color/Smoke_Pine">
+
+            <ImageButton
+                android:id="@+id/addBtn"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginEnd="30dp"
+                android:background="#00FDFDFD"
+                android:scaleType="fitXY"
+                android:tint="@color/Dark_Sapphire"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/plus" />
+
+            <TextView
+                android:id="@+id/chooseSongAlbum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="chooseSongAlbum"
+                android:textColor="@color/Dark_Sapphire"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.515" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ListView
+            android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_marginTop="3dp"
+            android:divider="@color/Bright_white"
+            tools:listitem="@layout/choose_song_item">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:background="@color/Smoke_Pine">
-
-                <ImageButton
-                    android:id="@+id/addBtn"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_marginEnd="30dp"
-                    android:background="#00FDFDFD"
-                    android:scaleType="fitXY"
-                    android:tint="@color/Dark_Sapphire"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/menu1" />
-
-                <TextView
-                    android:id="@+id/chooseSongAlbum"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="chooseSongAlbum"
-                    android:textColor="@color/Dark_Sapphire"
-                    android:textSize="20sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.515" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <ListView
-                android:id="@+id/list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="3dp"
-                android:divider="@color/Bright_white"
-                tools:listitem="@layout/choose_song_item">
-
-            </ListView>
-        </LinearLayout>
-
-        <com.andremion.floatingnavigationview.FloatingNavigationView
-            android:id="@+id/floating_navigation_view"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="bottom|right"
-            android:layout_margin="20dp"
-            app:backgroundTint="@color/Smoke_Pine"
-
-            app:drawMenuBelowFab="true"
-            app:menu="@menu/navigation_view" />
-
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        </ListView>
+    </LinearLayout>
 
 </LinearLayout>
 
