--- a/app/src/main/res/layout/activity_rename_file_popup.xml
+++ b/app/src/main/res/layout/activity_rename_file_popup.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/iimage"
+        android:id="@+id/iimageeee"
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:background="@drawable/round_message"
@@ -19,44 +19,44 @@
         app:layout_constraintVertical_bias="0.3" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/renametext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="노래제목을 입력하세요"
+        android:layout_marginBottom="10dp"
+        android:text="변경할 제목을 입력하세요"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/fileNameEditText"
+        app:layout_constraintBottom_toTopOf="@+id/fileNameEditText2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/fileNameEditText"
+        android:id="@+id/fileNameEditText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="My song"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
 
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent" />
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="30dp"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@id/iimage"
+        app:layout_constraintBottom_toBottomOf="@+id/iimageeee"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
-            android:id="@+id/backBtn"
+            android:id="@+id/backBtn22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/Faded_Denim"
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content" />
 
         <Button
-            android:id="@+id/okBtn"
+            android:id="@+id/okBtn22"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/Faded_Denim"
